Doctrine Entities and migration implemented

--- a/.env
+++ b/.env
@@ -28,4 +28,4 @@ APP_SECRET=dca282f3e80e2eb6227ea66ad0c59f36
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://root:@127.0.0.1:3306/clinic"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/clinic2?charset=utf8mb4"
